Fix: Unify Account Switcher UI on mobile to match desktop (dropdown style)

--- a/src/components/layout/header/account-switcher.scss
+++ b/src/components/layout/header/account-switcher.scss
@@ -250,10 +250,6 @@
         width: 320px;
         background-color: var(--general-main-2);
 
-        @include tablet-screen {
-            position: unset;
-        }
-
         &--wallets {
             width: 32rem;
             right: -3.2rem;
@@ -274,17 +270,6 @@
             max-width: calc(100% - 1.6rem);
             margin: 0.2rem 0.8rem 0.8rem;
             height: 4rem;
-        }
-
-        @include mobile-or-tablet-screen {
-            position: relative;
-            top: unset;
-            left: unset;
-            right: unset;
-            width: 100%;
-            box-shadow: none;
-            height: 100%;
-            border-radius: 0;
         }
 
         .dc-themed-scrollbars {
